--- a/src/styles.css
+++ b/src/styles.css
@@ -114,16 +114,18 @@ body {
 	-o-border-radius: var(--border-radius);
 }
 
+/**
+* ----------------------------------------
+* animation scale-up-center
+* ----------------------------------------
+*/
 .scale-up-center {
+  z-index:20;
 	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
 		both;
 	animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
-/**
- * ----------------------------------------
- * animation scale-up-center
- * ----------------------------------------
- */
+
 @-webkit-keyframes scale-up-center {
 	0% {
 		-webkit-transform: scale(0.5);
@@ -143,4 +145,86 @@ body {
 		-webkit-transform: scale(1);
 		transform: scale(1);
 	}
+}
+
+
+/**
+* ----------------------------------------
+* animation flip-scale-up-hor
+* ----------------------------------------
+*/
+.flip-scale-up-hor {
+  z-index:20;
+	-webkit-animation: flip-scale-up-hor 0.5s linear both;
+	        animation: flip-scale-up-hor 0.5s linear both;
+}
+
+ @-webkit-keyframes flip-scale-up-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+            transform: scale(1) rotateX(0);
+  }
+  50% {
+    -webkit-transform: scale(2.5) rotateX(-90deg);
+            transform: scale(2.5) rotateX(-90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(-0deg);
+            transform: scale(1) rotateX(-0deg);
+  }
+}
+@keyframes flip-scale-up-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+            transform: scale(1) rotateX(0);
+  }
+  50% {
+    -webkit-transform: scale(2.5) rotateX(-90deg);
+            transform: scale(2.5) rotateX(-90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(-0deg);
+            transform: scale(1) rotateX(-0deg);
+  }
+}
+
+
+/**
+* ----------------------------------------
+* animation flip-scale-up-ver
+* ----------------------------------------
+*/
+.flip-scale-up-ver {
+  z-index:20;
+	-webkit-animation: flip-scale-up-ver 0.5s linear both;
+	        animation: flip-scale-up-ver 0.5s linear both;
+}
+
+ @-webkit-keyframes flip-scale-up-ver {
+  0% {
+    -webkit-transform: scale(1) rotateY(0);
+            transform: scale(1) rotateY(0);
+  }
+  50% {
+    -webkit-transform: scale(2.5) rotateY(90deg);
+            transform: scale(2.5) rotateY(90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateY(0deg);
+            transform: scale(1) rotateY(0deg);
+  }
+}
+@keyframes flip-scale-up-ver {
+  0% {
+    -webkit-transform: scale(1) rotateY(0);
+            transform: scale(1) rotateY(0);
+  }
+  50% {
+    -webkit-transform: scale(2.5) rotateY(90deg);
+            transform: scale(2.5) rotateY(90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateY(0deg);
+            transform: scale(1) rotateY(0deg);
+  }
 }
