--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,9 @@
 	--font-cartoon: 'Bangers', cursive;
 	--font-color: #ef7b45;
 	--border-radius: 0.25rem;
+  --background-color-tiles: #8BDEDF;
+  --background-color-active-tiles: #2C5364;
+  --background-grid: #CDEDF6;
 }
 
 #root {
@@ -53,16 +56,19 @@ body {
 	font-family: var(--font-cartoon);
 	text-align: center;
 	width: 100%;
-	margin: 2rem 0;
+	margin: 2rem 0 0 0;
 	color: var(--font-color);
 }
 
+.title h1{
+  margin: 0;
+}
 .wrapperTable {
 	margin: 0 auto;
 }
 
 .table {
-	background-color: #cdedf6;
+	background-color: var(--background-grid);
 	border-radius: var(--border-radius);
 	padding: var(--gap-space);
 	display: grid;
@@ -77,7 +83,7 @@ body {
 
 .cell {
 	font-family: var(--font-cartoon);
-	background-color: #8bdedf;
+	background-color: var(--background-color-tiles);
 	transition: 1s;
 	border-radius: var(--border-radius);
 	font-weight: 700;
@@ -99,7 +105,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	color: var(--font-color);
-	background-color: #2c5364;
+	background-color: var(--background-color-active-tiles);
 	transition: 0.5s;
 	width: 100%;
 	height: 100%;
@@ -113,7 +119,22 @@ body {
 	-ms-border-radius: var(--border-radius);
 	-o-border-radius: var(--border-radius);
 }
-
+.score-board{
+  width:100%;
+  padding: 2rem 0 .4rem 0;
+  text-align: end;
+}
+.score-board span{
+  padding: .5rem 2rem;
+  border: solid .5rem var(--background-grid);
+  font-family: var(--font-cartoon);
+  color: var(--font-color);
+  border-radius: 10px 10px 0 0;
+  -webkit-border-radius: 10px 10px 0 0;
+  -moz-border-radius: 10px 10px 0 0;
+  -ms-border-radius: 10px 10px 0 0;
+  -o-border-radius: 10px 10px 0 0;
+}
 /**
 * ----------------------------------------
 * animation scale-up-center
