--- a/src/styles.css
+++ b/src/styles.css
@@ -10,19 +10,17 @@
   --background-grid: #CDEDF6;
 }
 
-#root {
-	height: 100%;
-}
-
 * {
 	max-width: 100%;
 	position: relative;
 }
+
 *,
 *::after,
 *::before {
 	box-sizing: border-box;
 }
+
 html,
 body {
 	margin: 0;
@@ -44,24 +42,28 @@ body {
 	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+body{
+  height: 100vh;
+}
+
 .container {
-	position: relative;
 	height: 100%;
 	width: 100%;
 	display: flex;
-	flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
 	font-family: var(--font-cartoon);
 	text-align: center;
 	width: 100%;
-	margin: 2rem 0 0 0;
 	color: var(--font-color);
 }
 
 .wrapperTable {
-	margin: 0 auto;
+  margin-bottom: 4rem;
 }
 
 .table {
