--- a/src/styles.css
+++ b/src/styles.css
@@ -72,19 +72,26 @@ b{
 
 .rules{
   color: var(--font-color);
-  text-align: center;
-  width:30rem;
-}
-.rules > p {
-  font-family: var(--font-text);
+  max-width: 30rem;
 }
 
-.rules > i{
+.rules > p {
+  font-family: var(--font-text);
+  padding: 1rem;
+  text-align: justify;
+}
+
+.inventor{
+  text-align: center;
+}
+
+.inventor > i {
   font-family: var(--font-text);
   color: var(--font-color);
   padding-bottom: 2rem;
   font-size: .7rem;
 }
+
 .wrapperTable {
   margin-bottom: 1rem;
 }
@@ -105,6 +112,7 @@ b{
 	-moz-border-radius: var(--border-radius);
 	-ms-border-radius: var(--border-radius);
 	-o-border-radius: var(--border-radius);
+  touch-action: none;
 }
 
 .tile {
